--- a/index.html
+++ b/index.html
@@ -51,10 +51,10 @@
       <nav id="navbar" class="navbar order-last order-lg-0">
         <ul>
           <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
-          <li><a class="nav-link scrollto" href="#about">About us</a></li>
+          <li><a class="nav-link scrollto" href="#about">About Us</a></li>
          
           </li>
-          <li><a class="nav-link scrollto" href="#services">Services</a></li>
+          <li><a class="nav-link scrollto" href="#services">Our Offerings</a></li>
           
           <li><a class="nav-link scrollto" href="#contact">Contact Us</a></li>
         </ul>
